Fix deprecated Integer constructor usage in WildcardsExemplos
Co-authored-by: luiscarlosjunior <7853769+luiscarlosjunior@users.noreply.github.com>